src/test/deca/syntax/valid/custom/while/while_readFloat.deca
// Description:
//   While with condition readFloat().
// Results:
//
//
// History:
//    created on 13/01/2022

{
   while (readFloat() == 1.1) {
        i = i + 1;
   }
}
