src/test/deca/syntax/invalid/custom/object/while_new.deca
// Description:
//   While with condition new.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   while new A() == 1) {
        i = i + 1;
   }
}
